# fit

./: .gitignore  README.md  compile_commands.json  fit_tests.sh  meson.build  tags  todo.md
c/: Makefile  gsl_test.c  meson.build
c/include/: meson.build
c/src/: fit.c  grid.c  gsl_test.c  tests.c
cpp/: Makefile  fit.cpp  fit.hpp  grid.cpp  grid.hpp  main.cpp  sphere.c  tags  test.cpp
misc/c/: compile_commands.json  make_gsl
misc/c/include/: fit.h
misc/c/src/: #grid.c#  eg.c  fit2.c  main.c  meson.build  sphere-O3.s  sphere-g.s  sphere-none.s  sphere.c
misc/python/: cls.py  grid.py
python/: grid.py  sphere.py  test.py  test.sh
src/: Makefile  fit.cpp  fit.hpp  main.cpp  meson.build  sphere.c  sphere_dx  sphere_dx.c  tests.cpp
